--- a/_posts/2023-10-20-scRNAseq.markdown
+++ b/_posts/2023-10-20-scRNAseq.markdown
@@ -5,7 +5,7 @@ show_date: true
 title:  scRNA-seq分析基本流程
 date:   2023-10-20 13:40:20 -0600
 description: scRNA-seq分析基本流程
-img: posts/20231020/鬼使白.jpg
+img: img/20231020/鬼使白.jpg
 tags: [scRNA-seq,数据分析]
 author: 孙睿
 #github:  amaynez/Perceptron/
@@ -39,7 +39,7 @@ mathjax: yes
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/单细胞.png" width = "100%" alt=""/>
+    src="img/posts/20231020/单细胞.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -185,7 +185,7 @@ normalizing counts per cell
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/QC_1.png" width = "100%" alt=""/>
+    src="img/posts/20231020/QC_1.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -247,7 +247,7 @@ extracting highly variable genes
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/qc_2.png" width = "100%" alt=""/>
+    src="img/posts/20231020/qc_2.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -295,7 +295,7 @@ top 50 PCs explained variance ratio 0.1930819
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/pca_ratio_normal.png" width = "50%" alt=""/>
+    src="img/posts/20231020/pca_ratio_normal.png" width = "50%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -313,7 +313,7 @@ utils.pca_load_rank(mus)
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/pca_load.png" width = "100%" alt=""/>
+    src="img/posts/20231020/pca_load.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -332,7 +332,7 @@ sc.pl.pca(mus, color=['Inpp5d','St18','Nrxn1','Atp1a2'])
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/pca_visual.png" width = "100%" alt=""/>
+    src="img/posts/20231020/pca_visual.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -368,7 +368,7 @@ computing UMAP
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/umap_vis.png" width = "100%" alt=""/>
+    src="img/posts/20231020/umap_vis.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -397,7 +397,7 @@ print(cluster_cell_num)
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/leiden.png" width = "60%" alt=""/>
+    src="img/posts/20231020/leiden.png" width = "60%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -462,7 +462,7 @@ sc.pl.dotplot(raw_mus, marker_dic, 'leiden')
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/dotplot_1.png" width = "100%" alt=""/>
+    src="img/posts/20231020/dotplot_1.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -498,7 +498,7 @@ sc.pl.dotplot(raw_mus, marker_dic, 'leiden')
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/dotplot_2.png" width = "100%" alt=""/>
+    src="img/posts/20231020/dotplot_2.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -556,7 +556,7 @@ plt.show()
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/annotation.png" width = "100%" alt=""/>
+    src="img/posts/20231020/annotation.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -589,7 +589,7 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/pca_var_raw.png" width = "50%" alt=""/>
+    src="img/posts/20231020/pca_var_raw.png" width = "50%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -600,7 +600,7 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/pca_gene_raw.png" width = "100%" alt=""/>
+    src="img/posts/20231020/pca_gene_raw.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -611,7 +611,7 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/umap_raw.png" width = "100%" alt=""/>
+    src="img/posts/20231020/umap_raw.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
