--- a/_posts/2023-10-20-scRNAseq.markdown
+++ b/_posts/2023-10-20-scRNAseq.markdown
@@ -10,6 +10,7 @@ tags: [scRNA-seq,数据分析]
 author: 孙睿
 #github:  amaynez/Perceptron/
 mathjax: yes
+catalog: true
 ---
 - [scRNA-seq 基本分析流程](#scrna-seq-基本分析流程)
   - [数据准备](#数据准备)
@@ -39,7 +40,7 @@ mathjax: yes
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/单细胞.png" width = "100%" alt=""/>
+    src="/img/20231020/单细胞.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -185,7 +186,7 @@ normalizing counts per cell
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/QC_1.png" width = "100%" alt=""/>
+    src="/img/20231020/QC_1.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -247,7 +248,7 @@ extracting highly variable genes
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/qc_2.png" width = "100%" alt=""/>
+    src="/img/20231020/qc_2.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -295,7 +296,7 @@ top 50 PCs explained variance ratio 0.1930819
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/pca_ratio_normal.png" width = "50%" alt=""/>
+    src="/img/20231020/pca_ratio_normal.png" width = "50%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -313,7 +314,7 @@ utils.pca_load_rank(mus)
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/pca_load.png" width = "100%" alt=""/>
+    src="/img/20231020/pca_load.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -332,7 +333,7 @@ sc.pl.pca(mus, color=['Inpp5d','St18','Nrxn1','Atp1a2'])
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/pca_visual.png" width = "100%" alt=""/>
+    src="/img/20231020/pca_visual.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -368,7 +369,7 @@ computing UMAP
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/umap_vis.png" width = "100%" alt=""/>
+    src="/img/20231020/umap_vis.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -397,7 +398,7 @@ print(cluster_cell_num)
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/leiden.png" width = "60%" alt=""/>
+    src="/img/20231020/leiden.png" width = "60%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -462,7 +463,7 @@ sc.pl.dotplot(raw_mus, marker_dic, 'leiden')
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/dotplot_1.png" width = "100%" alt=""/>
+    src="/img/20231020/dotplot_1.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -498,7 +499,7 @@ sc.pl.dotplot(raw_mus, marker_dic, 'leiden')
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/dotplot_2.png" width = "100%" alt=""/>
+    src="/img/20231020/dotplot_2.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -556,7 +557,7 @@ plt.show()
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/annotation.png" width = "100%" alt=""/>
+    src="/img/20231020/annotation.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -589,7 +590,7 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/pca_var_raw.png" width = "50%" alt=""/>
+    src="/img/20231020/pca_var_raw.png" width = "50%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -600,7 +601,7 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/pca_gene_raw.png" width = "100%" alt=""/>
+    src="/img/20231020/pca_gene_raw.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -611,19 +612,7 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="img/posts/20231020/umap_raw.png" width = "100%" alt=""/>
-    <br>
-    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
-    display: inline-block;
-    color: #999;
-    padding: 2px;">
-  	</div>
-</center>
-
-<center>
-    <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/leiden_raw.png" width = "50%" alt=""/>
+    src="/img/20231020/umap_raw.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -635,7 +624,19 @@ top 50 PCs explained variance ratio 0.08693491
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/raw_dotplot.png" width = "100%" alt=""/>
+    src="/img/20231020/leiden_raw.png" width = "50%" alt=""/>
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;">
+  	</div>
+</center>
+
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="/img/20231020/raw_dotplot.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -663,7 +664,7 @@ raw_mus.obs['leiden'] =mus.obs['raw']
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/umap_raw_all.png" width = "100%" alt=""/>
+    src="/img/20231020/umap_raw_all.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -675,7 +676,7 @@ raw_mus.obs['leiden'] =mus.obs['raw']
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/leiden_raw_all.png" width = "50%" alt=""/>
+    src="/img/20231020/leiden_raw_all.png" width = "50%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -687,7 +688,7 @@ raw_mus.obs['leiden'] =mus.obs['raw']
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/raw_dotplot_all.png" width = "80%" alt=""/>
+    src="/img/20231020/raw_dotplot_all.png" width = "80%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -711,7 +712,7 @@ raw_mus.obs['leiden'] =mus.obs['raw']
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/hvg_umap_1.png" width = "100%" alt=""/>
+    src="/img/20231020/hvg_umap_1.png" width = "100%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -723,7 +724,7 @@ raw_mus.obs['leiden'] =mus.obs['raw']
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="../assets/img/posts/20231020/hvg_umap_2.png" width = "50%" alt=""/>
+    src="/img/20231020/hvg_umap_2.png" width = "50%" alt=""/>
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
