--- a/_posts/2023-10-20-scRNAseq.markdown
+++ b/_posts/2023-10-20-scRNAseq.markdown
@@ -6,7 +6,7 @@ title:  scRNA-seq分析基本流程
 date:   2023-10-20 13:40:20 -0600
 description: scRNA-seq分析基本流程
 header-img: img/20231020/鬼使白.jpg
-tags: [scRNA-seq,数据分析]
+tags: [scRNA-seq,计算生物学]
 author: 孙睿
 #github:  amaynez/Perceptron/
 mathjax: yes
